Add  "Profile Page"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileBookkeeping">
+        android:theme="@style/Theme.Mob">
         <activity
-            android:name="com.example.mob.MainActivity"
+            android:name="com.example.mobilebookkeeping.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.MobileBookkeeping.NoActionBar">
             <intent-filter>
